--- a/.render.yaml
+++ b/.render.yaml
@@ -1,9 +1,6 @@
 services:
   - type: web
     name: travelgenie-backend
-    env: python
-    buildCommand: pip install -r requirements.txt && playwright install chromium
-    startCommand: uvicorn app:app --host 0.0.0.0 --port 8000
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.11
+    env: docker
+    dockerfilePath: ./Dockerfile
+    plan: free
